[build-system]
requires = ["setuptools",
            "setuptools_scm",
            ]
build-backend = "setuptools.build_meta"

build-backend = "setuptools.build_meta"

[project]
name = "ChACRA"
version = "0.7.0"
description = "Reveal the energy dependent interaction modes of proteins with "\ 
               replica exchange simulations and contact analysis."
authors = [{name = "Dan Burns", email = "dnlburns808@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
            "femto",
            "openmm>=8.0.0",
            "mdanalysis>=2.9.0",
            "numpy",
            "pandas",
            "scipy",
            "vmd-python",
            "tqdm",
            "prolif",
            "pyarrow",
            "nglview",
            "matplotlib",
            "sklearn",
            "networkx"
            ]

scripts = ["scripts/get_state_contacts.sh"]


[tool.setuptools.packages.find]
where = ["chacra"]  
include = ["*"]  # ["*"] by default
exclude = ["examples.tetramer","examples.trimer"] 
namespaces = false 

[project.scripts]
process-output = "chacra.scripts.process_hremd_output:main"
chacra-project = "chacra.scripts.project_setup:main"
run-femto = "chacra.scripts.run_femto_hremd:main"
run-hremd = "chacra.scripts.run_hremd:main"
