[build-system]
requires = ["setuptools",
            "setuptools_scm",
            ]
build-backend = "setuptools.build_meta"

[project]
name = "ChACRA"
version = "0.7.0"

description = """
Reveal the energy dependent interaction modes of proteins with  
replica exchange simulations and contact analysis.
"""

authors = [{name = "Dan Burns", email = "dnlburns808@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
            "femto",
            "openmm>=8.0.0",
            "mdanalysis>=2.9.0",
            "numpy",
            "pandas",
            "scipy",
            "vmd-python",
            "tqdm",
            "prolif",
            "pyarrow",
            "nglview",
            "matplotlib",
            "sklearn",
            "networkx"
            ]


[tool.setuptools.packages.find]
where = ["chacra"]  
include = ["*"]  # ["*"] by default
exclude = ["examples.tetramer","examples.trimer"] 
namespaces = false 

[project.scripts]
process-output = "chacra.scripts.process_hremd_output:main"
chacra-project = "chacra.scripts.project_setup:main"
run-femto = "chacra.scripts.run_femto_hremd:main"
run-hremd = "chacra.scripts.run_hremd:main"
get-state-contacts = "chacra.scripts.get_state_contacts:main"

[tool.ruff]
# Match Black's default line length
line-length = 80
# Lint rules: E=pycodestyle, F=pyflakes, I=isort, B=bugbear
select = ["E", "F", "I", "B"]
exclude = [
    "tests/data",        # Ignore large test data
    "dist",              # Build artifacts
    "build",
    ".venv",
]
# Automatically fix simple issues (when using --fix)
fix = true

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = "tests/data"
